client/src/components/main/BlockCenter/center.scss
@import '../../../style.scss';

.contentbox {
  width: 100%;
  overflow: hidden;
  box-sizing: border-box;
  height: auto;
  line-height: 1.5;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  border-bottom: 1px solid rgba(255, 255, 255, 0.192);

  &:first-child {
    box-shadow: inset 0px 5px 5px -5px #000000c5;
  }

  &:last-child {
    border-bottom: none;
  }

  &--double {
    flex-direction: row;

    &:nth-child(2) {
      border-right: none;
    }
  }
}

.content-element {
  width: 100%;
  height: auto;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-content: flex-start;
  padding-bottom: 0.5rem;

  &__textarea {
    width: 100%;
    display: block;
    border: 1px solid #ccc;
    overflow-x: hidden;
    overflow-y: auto;
    font-size: 14px;
    font-weight: 500;
    border: none;
    padding: 1rem 0.5rem 0 24px;
    letter-spacing: 0.05em;
    box-shadow: none;

    resize: none;
    border: none;
    overflow: hidden;
    box-sizing: border-box;
    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
    background: #3a3b3c;
    color: #dadada;

    &--active {
      color: #dadada;
    }

    &--deactivated {
      color: grey;
    }

    &--single-big {
      text-align: center;
      max-height: 2.5em;
      font-size: 30px;
      font-weight: 700;
      border: none;
      padding: 1rem 0.5rem 0 0.5rem;
    }

    &--window-light {
      box-shadow: rgba(0, 0, 0, 0.24) 0px 0px 6px inset;
      resize: none;
      border: none;
      overflow: auto;
      box-sizing: border-box;
      width: 100%;
      padding: 7px;
      line-height: 1.5;
      font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
      font-size: 12px;
      font-weight: 300;
      background-color: #4e4f50;
      color: #dadada;
      margin: 0;
      border-radius: 5px;
      height: 100px;
      box-shadow: inset 0px 0px 6px #0000003d;
    }

    &--double {
      padding: 0;
      font-size: 14pt;
      font-weight: 200;
    }
  }

  &__split {
    font-size: 14px;
    color: #dadada;
    &--option {
      font-weight: 400;
      font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
      letter-spacing: 0.075rem;
      background-color: #525050 !important;
      font-size: 14px;
      letter-spacing: 0.1em;
    }

    &--button {
      width: fit-content;
      border: 1px solid #ffffff78;
      padding: 10px;
      font-weight: 700;
      border-radius: 200px;
      font-size: 14px;
      background-color: #525050 !important;
      letter-spacing: 0.05em;
    }
  }
  &__feature_text {
    font-size: 14px;
    padding: 16px 24px 16px 24px;
    font-weight: 400;
    margin: 0;
    color: #dadada;
    letter-spacing: 0.2px;
    line-height: 1.5;

    &--red {
      background-color: #ff586e;
      display: inline-block;
      padding: 0px 3px;
      color: white;
      font-weight: bold;
      font-style: normal;
      line-height: 1.2;
    }

    a {
      color: white;
    }
  }

  &__content {
    &--alphabet-transposition {
      box-sizing: border-box;
      width: 100%;
      padding: 24px 24px 0px 24px;
    }
  }

  &--double {
    width: 50%;
    border-right: 1px solid rgba(255, 255, 255, 0.192);
    &:nth-child(2) {
      border-right: none;
    }
  }

  &__adjust-plus-minus {
    font-size: 30px;
    padding: 0.5rem 24px 0.5rem 24px;
    cursor: default;

    &:first-child,
    &:last-child {
      &:hover {
        color: white;
        cursor: pointer;
      }
    }
  }

  &__select {
    background: rgba(0, 0, 0, 0);
    border: none;
    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
    padding: 0;
    width: fit-content;
    text-align: left;
    cursor: pointer;
    letter-spacing: 0.05em;
    font-size: 12pt;
    font-weight: 700;
    color: #dadada;

    & option {
      color: black;
      font-weight: 700;
    }

    &--font-s {
      font-size: 14px;
    }

    &--sm {
      width: 3em;
    }
  }

  &__settings-operators {
    font-size: 14px;
    font-weight: 700;
    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    color: #dadada;
    letter-spacing: 0.1em;

    &--multiple-elements {
      padding: 24px;
      flex-wrap: wrap;
      justify-content: flex-start;
    }

    &--vertical-center-flex {
      display: flex;
      flex-direction: column;
      height: -moz-fit-content;
      height: fit-content;
      justify-content: space-between;
      align-content: center;
      box-sizing: border-box;
      padding-top: 24px;
    }

    &--double {
      width: 100%;
      padding: 0.5rem 24px;
      justify-self: flex-start;
      font-size: 12pt;
    }

    &--split {
      margin: 2em 0px;
      flex-direction: row;
      justify-content: space-around;
      align-items: center;
    }
  }

  &__single-operator {
    font-size: 12px;
    word-break: break-word;
    letter-spacing: 1px;
    text-transform: uppercase;
    cursor: text;
    user-select: auto;
    width: 80%;
    align-self: center;

    &--left {
      padding: 0.5rem 24px 0.5rem 24px;
      align-self: flex-start;
      font-size: 18px;
      width: 100%;
      text-transform: lowercase;
    }

    &--button {
      font-size: 14px;
      background-color: $Blue-Main;
      color: #fff;
      font-weight: 500;
      font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
      text-decoration: none;
      text-align: center;
      cursor: pointer;
      padding: 0.5rem 24px 0.5rem 24px;
      letter-spacing: 0;
      border-radius: 2px;
      width: fit-content;
      align-self: center;
      border: none;
      margin-top: 1em;
      margin-bottom: 1em;
      transition: all 0.3s ease-out;
      transition-duration: $Transition-Medium;
      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
        0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);

      &:hover {
        background-color: $Blue-Main-Hover;
      }
    }
  }

  &__settings-name {
    color: #949494;
    padding: 1em 1em 0 24px;
    font-family: 'Source Sans Pro', 'Roboto', 'Helvetica', 'Arial', sans-serif;
    font-size: 12px;
    font-weight: 500;
    line-height: 10px;
    text-transform: uppercase;
    letter-spacing: 0.2px;
    width: fit-content;
    border-right: 1px solid rgba(255, 255, 255, 0.192);

    &--double {
      border: none;
    }

    &--no-transform {
      text-transform: none;
    }
  }
}

.alphabet-row {
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
    0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);

  &__standard,
  &__transpositioned {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-content: center;
    background: rgb(2, 0, 36);
    background: linear-gradient(90deg, #464646 20%, #292929 100%);
  }

  .arrow {
    color: rgba(255, 255, 255, 0.5);
  }

  &__vertically {
    border-left: 1px dashed rgba(255, 255, 255, 0.24);
    font-size: 100%;
    width: 10px;
    flex-grow: 2;
    font-weight: 400;
    text-align: center;
    text-transform: lowercase;
    color: #ffffffd5;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    font-size: 14px;
    line-height: 1.5;
  }

  &__character {
    border-left: 1px dashed rgba(255, 255, 255, 0.5);
    width: 10px;
    flex-grow: 2;
    font-weight: 400;
    text-align: center;
    text-transform: lowercase;
    color: rgba(255, 255, 255, 0.5);
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    font-size: 14px;
    line-height: 1.5;

    &--white {
      color: white;
    }
  }
}

.block-settings {
  z-index: 1;
  transition: box-shadow;
  transition-duration: 0.3s;
  transition-timing-function: linear;
  color: #2f1728;
  min-width: 350px;
  flex-grow: 0;
  background-color: #3a3b3c;
  border-radius: 0px;
  overflow: hidden;
  width: 100vw;
  border-radius: 0px;
  max-width: 100vw;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
    0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);

  &__body {
    height: auto;
  }

  &__input {
    width: 100%;
    height: 100%;
    line-height: 0;
    box-sizing: border-box;
    display: block;
  }

  &__head {
    height: 60px;
    background-color: #242526;
    color: white;
    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
    font-size: 18pt;
    font-weight: normal;
    box-sizing: border-box;
    padding: 16px 24px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    filter: drop-shadow(0px -5px 5px #000000c5);
  }
  &__head-options {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  &__head-option {
    font-size: 14px;
    margin-right: 10px;
    color: #ededed;
    transition-duration: 0.2s;
    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
    font-weight: 500;
    letter-spacing: 0.05em;
    height: 20px;
    line-height: 1;
    background-color: transparent;
    border: none;
    cursor: pointer;
    padding: 0;

    &--selected {
      color: $Blue-Font;
      font-weight: 900;
    }
  }

  &__head-caret {
    font: 500 20px 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row;
    align-self: center;
    color: #e1e1e1;
    border: none;
    background-color: transparent;
    font-size: 20px;
    font-weight: 500;
    margin: 0;
    padding: 0;
    letter-spacing: 0.05em;
    cursor: pointer;
  }

  .MuiSvgIcon-root {
    &:hover {
      color: $Blue-Font !important;
    }
  }
}

.explanation {
  width: 100%;
  overflow: hidden;
  box-sizing: border-box;
  height: fit-content;
  line-height: 1.5;
  padding: 24px;
  display: flex;
  align-content: center;
  justify-content: center;

  &__paragraph {
    font-size: 14px;
    font-weight: 400;
    margin: 0;
    color: #dadada;
    letter-spacing: 0.2px;
  }

  &__link {
    align-self: flex-start;
    color: #dadada;
    font-weight: 700;
    padding-top: 20px;
    font-weight: 500;
    width: fit-content;
    font-size: 14px;
    letter-spacing: 0.5px;
  }
}

.arrow {
  color: rgba(255, 255, 255, 0.3);
}

.caret {
  width: 30px;
  fill: white;
  font-size: 10px;
  padding-left: 10px;
  padding-bottom: 2px;
}

@media only screen and (min-width: 700px) {
  .block-settings {
    max-width: 70vw;
  }
}

@media only screen and (min-width: 1100px) {
  .block-settings {
    max-width: 400px;
    width: auto;
  }
}

